syntax = "proto3";

package bcsgitopsmanager;

option go_package = "./proto;bcsgitopsmanager";

import "protoc-gen-swagger/options/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service BcsGitopsWebhook {
  rpc TGitWebhook(TGitWebhookRequest) returns (TGitWebhookResponse) {
    option (google.api.http) = {
      post : "/gitopswebhook/v1/webhook/tgit"
      body : "rawData"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      summary : "工峰 webhook"
      description : "用于给工蜂的 webhook 请求做处理"
    };
  }
  rpc GeneralWebhook(GeneralWebhookRequest) returns (GeneralWebhookResponse) {
    option (google.api.http) = {
      post : "/gitopswebhook/v1/webhook/general"
      body : "rawData"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      summary : "常规 Git Webhook（github/gitlab）"
      description : "用于给常规的 git webhook 请求做处理"
    };
  }
}

message TGitWebhookRequest {
  bytes rawData = 1;
}

message TGitWebhookResponse {}

message GeneralWebhookRequest {
  bytes rawData = 1;
}

message GeneralWebhookResponse {}